Added ProcessLoggerThread and made Rti use logging thread